scss/partials/_navbar.scss
nav.oc-navbar {
  position: fixed;
  z-index: 1034;
  top: 0;
  left: 0;
  width: 100%;
  background-color: white;
  border-top: 4px solid $oc_yellow;
  margin: 0px;
  height: #{$navbar_height}px;
  border-bottom: 1px solid $oc_gray_6;

  @include big_web(){
    div.oc-navbar-header {
      position: relative;
      margin: 0 auto;
      padding: 0 30px;
      margin-top: 30px;
      &.columns-1{
        width: 384px;
      }
      &.columns-2{
        width: 728px;
      }
      &.columns-3{
        width: 1072px;
      }

      ul.navbar-right {
        float: right;
        margin-right: 0px;
      }
    }
  }
}

