fix navbar z-index

--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -1,6 +1,6 @@
 nav.oc-navbar {
   position: fixed;
-  z-index: 1034;
+  z-index: 1030;
   top: 0;
   left: 0;
   width: 100%;
